# electronic_shop_2

./: .gitignore  README.md  pyproject.toml
