[tool.poetry]
name = "electronic-shop-2"
version = "0.1.0"
description = ""
authors = ["kseniyaav <kseniyaav10@gmail.com>"]
readme = "README.md"
packages = [{include = "electronic_shop_2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
